# scubaduck

./: AGENTS.md  README.md  codex_setup.sh  pyproject.toml
.github/workflows/: ci.yml
scubaduck/: server.py
scubaduck/static/: index.html
scubaduck/static/js/: table_view.js  time_column.js  timeseries_chart.js  view_settings.js
stubs/duckdb/: __init__.pyi
tests/: conftest.py  test_multi_table_web.py  test_server.py  test_server_basic.py  test_server_db_types.py  test_server_errors.py  test_server_time.py  test_server_timeseries.py  test_table_dropdown.py  test_web.py  test_web_basics.py  test_web_table.py  test_web_timeseries.py
