[project]
name = "scubaduck"
version = "0.1.0"
description = "Scuba on DuckDB"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "duckdb",
    "flask",
    "python-dateutil>=2.9.0.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-n auto --tb=native"

[tool.ruff]
target-version = "py312"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "pytest-xdist>=3.6.1",
    "playwright>=1.52.0",
    "pytest-playwright>=0.7.0",
]
